Fixed some spacing issues (as well as #28) with filter/search
Everything seems to work fine but I feel like there might still be some issues lurking. Hopefully this can work as a short-term fix.

--- a/src/components/filter-search-bar/filter-search-bar.module.scss
+++ b/src/components/filter-search-bar/filter-search-bar.module.scss
@@ -25,7 +25,7 @@
 @media screen and (max-width: ($endSmallScreenSize)) {
   .midContainer {
     order: 1;
-    margin: 16px 0 8px;
+    margin: 0 0 8px;
     flex-basis: 100%;
   }
 
